<resources>
    <string name="app_name">Save My Money</string>
    <string name="nv_open">Open</string>
    <string name="nv_close">Close</string>
    <string name="nav_home">Home</string>
    <string name="nav_add">Add</string>
    <string name="nav_More">More</string>
    <string name="nav_report">Thống Kê</string>
    <string name="nav_task">Lập Kế Hoạch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aboutus">
        \t- Phần mềm được phát triển dựa trên yêu cầu của cuộc sống.\n
\t- Phần mềm giúp cho người dùng có thể quản lý tiền bạc một cách dể dàng.\n
\t- Version Mới Nhất : 0.1.\n
\t- Ngày Cập Nhật : 10/10/2018.\n
\t- Phền mềm được phát triển bởi Team RAMPAGE.\n
\t- Team Gồm 5 Thành Viên:\n
         \t\t+ Đắc (Leader)\n
         \t\t+ Tuấn Anh (BA)\n
         \t\t+ Danh (Dev)\n
         \t\t+ Bảo (Dev)\n
         \t\t+ An (Tester)\n
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category_wallet">
        <item>Ví Thông Thường</item>
        <item>Ví Tiết Kiệm</item>
    </string-array>

</resources>
