<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:showAsAction="collapseActionView" />
    <item android:title="@string/nav_task"
        app:showAsAction="collapseActionView"
        android:id="@+id/nav_task"
        android:icon="@drawable/icon_task_menu"/>

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/icon_add_biggest"
        android:title="@string/nav_add"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/icon_report"
        android:title="@string/nav_report"
        app:showAsAction="collapseActionView"></item>

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/icon_more_biggest"
        android:title="@string/nav_More"
        app:showAsAction="collapseActionView" />


</menu>